# MenuFramework-in-Qt

./: CMakeLists.txt  Class - naming.txt  projectStructure.txt
BuildManager/: BuildManager.cpp  BuildManager.h  CMakeLists.txt
BuildTool/: CMakeLists.txt  Controller.cpp  Controller.h  GccCommandGenerator.cpp  GccCommandGenerator.h  GccController.cpp  GccController.h  Helper.cpp  Helper.h  Performer.cpp  Performer.h  Process.h
Main/: CMakeLists.txt  main.cpp
Main/Resources/: resources.qrc
Main/Resources/ExecutableFolder/: PrintMessage.cpp  main.cpp
Main/Resources/RecompileFolder/: main.cpp
Menu/: CMakeLists.txt  Menu.cpp  Menu.h
